Fix import window being too high on some resolutions

--- a/resources/style/import.css
+++ b/resources/style/import.css
@@ -5,7 +5,7 @@
 }
 
 .import-content .scroll-pane {
--fx-max-height: 600px;
+-fx-max-height: 500px;
 }
 
 .import-content .filter-bar {
